name:       OwO
version:    0.1.0.0
synopsis:   A pwoof assistant and functional pwogwamming langwage
homepage:   https://www.owo-lang.org
license:    Apache-2.0
author:     Tesla Ice Zhang
maintainer: Tesla Ice Zhang <ice1000kotlin@foxmail.com>
category:   Language
build-type: Simple
-- copyright:

extra-source-files: misc/CHANGELOG.md
                    README.md
                    src/full/impossible.h
license-file:       LICENSE
cabal-version:      >=1.10
-- description:

source-repository head
  type:     git
  location: https://github.com/owo-lang/OwO.git

flag debug
  default: False
  manual:  True
  description: Enable debugging features that may slow OwO down.

library
  build-depends:  base >= 4.8 && < 5
                , binary >= 0.7.3.0 && < 0.9
                , containers >= 0.5.10 && < 0.7
                , deepseq >= 1.4.1.1 && < 1.5
                , directory
                , filepath
                , gitrev >= 1.3.1 && < 2.0
                -- mtl-2.1 contains a severe bug.
                -- mtl >= 2.2 && < 2.2.1 doesn't export Control.Monad.Except.
                , mtl >= 2.2.1 && < 2.3
                , split >= 0.2 && < 0.3
                , strict >= 0.3.2 && < 0.4
                , transformers >= 0.5 && < 0.6
  hs-source-dirs: src/full
  include-dirs:   src/full

  if flag(debug)
    cpp-options:    -DNDEBUG

  -- ASR (2018-10-16). Required for supporting GHC 8.4.1, 8.4.2 and
  -- 8.4.3. See Agda issue #3277.
  if impl(ghc >= 8.4.1) && impl(ghc <= 8.4.3)
    build-depends: text >= 1.2.3.0 && < 1.3
  else
    build-depends: text >= 1.2.3.1 && < 1.3

  default-language: Haskell2010
  exposed-modules:  OwO.Options
                  , OwO.Main
                  , OwO.Version

                  , OwO.Syntax.Abstract
                  , OwO.Syntax.Common
                  , OwO.Syntax.Concret
                  , OwO.Syntax.Position

                  , OwO.TypeChecking.Core
                  , OwO.TypeChecking.Match
                  , OwO.TypeChecking.Monad
                  , OwO.TypeChecking.Reduce

                  , OwO.Util.Impossible
                  , OwO.Util.List
                  , OwO.Util.Monad
                  , OwO.Util.StrictMaybe

                  -- Generated by Cabal
                  , Paths_OwO
  -- other-modules:
  -- other-extensions:

executable owo
  main-is:          Main.hs
  build-depends:    OwO
                  , base >= 4.8 && < 5
                  , optparse-applicative >= 0.14 && < 0.15
  hs-source-dirs:   src/main
  default-language: Haskell2010
  other-modules:    OptionParser
  -- other-extensions:

